--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
+                <a class="navbar-brand" href="#!"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -42,7 +42,7 @@
                         <h2>Treating Oral Ties?</h2>
                         <p class="lead">You need a village!</p>
                         <p class="mb-0">GoldenGate Kids is a specialized business dedicated to treating children with Tethered Oral Ties (TOTs). Our experienced professionals use the latest technology and techniques to provide comprehensive care and improve the lives of our young patients. From initial consultation to post-operative care, we are committed to providing the highest level of care and helping children overcome the challenges of TOTs. Contact us today to learn more about our personalized treatment plans.</p>
-                        
+
                     </div>
                 </div>
             </div>
